Fix footer on mobile

--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /* Navbar */
 nav {
-  filter: drop-shadow(0px 0px 3px rgba(0,0,0,0.6));
+  filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0.6));
 }
 
-nav .title{
+nav .title {
   margin-bottom: 0 !important;
 }
 
@@ -11,6 +11,7 @@ nav .title{
   nav .title {
     font-size: 1.6rem;
   }
+
   .section {
     padding-top: 1rem;
   }
@@ -31,13 +32,13 @@ html {
   height: 100%;
 }
 
-body{
+body {
   min-height: 100%;
   position: relative;
 }
 
-.section{
-  padding-bottom: 130px;
+.section {
+  padding-bottom: 210px;
 }
 
 
